--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ iframe {
   padding: 0;
   text-align: center;
   font-size: 24px;
-  color: #444444;
+  color: #3234a8;
   line-height: 1.5;
   text-decoration: none;
 }
@@ -162,7 +162,7 @@ iframe {
   display: inline-block;
   padding: 4px 10px 2px 10px;
   font-size: 15px;
-  color: #006666;
+  color: #3234a8;
   line-height: 1.3;
   letter-spacing: 0.05em;
   text-decoration: none;
@@ -170,7 +170,7 @@ iframe {
 }
 
 #h_nav li a:hover {
-  color: #006666;
+  color: #3234a8;
   background-color: #f7f4ec;
 }
 
@@ -206,7 +206,7 @@ iframe {
   padding: 20px 0 10px 0;
   font-size: 20px;
 
-  color: #0E6251;
+  color: #3234a8;
   text-align: left;
 }
 
